--- a/apex_comprehensive_strategy.html
+++ b/apex_comprehensive_strategy.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apex Wiring Solutions - Comprehensive Marketing Strategy</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="Apex-Wiring-Logo-RGB.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Apex-Wiring-Logo-RGB.png">
+    <link rel="shortcut icon" href="Apex-Wiring-Logo-RGB.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Apex-Wiring-Logo-RGB.png">
     <style>
         /* ===== DESIGN SYSTEM ===== */
         :root {
